PW + Copy Code to Clipboard

--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -3167,16 +3167,16 @@
           <div class="html-block code-block" style="display:none;">
             <pre class="html-code"><code>
             &lt;img src=&#34;../icon/arrow-down.svg&#34; alt=&#34;Arrow Down&#34;&gt;
-            &lt;img src=&#34;../icon/arrow-up.svg&#34; alt=&#34;Arrow Down&#34;&gt;
-            &lt;img src=&#34;../icon/arrow-back.svg&#34; alt=&#34;Arrow Down&#34;&gt;
-            &lt;img src=&#34;../icon/arrow-forward.svg&#34; alt=&#34;Arrow Down&#34;&gt;
-            &lt;img src=&#34;../icon/plus.svg&#34; alt=&#34;Arrow Down&#34;&gt;
-            &lt;img src=&#34;../icon/minus.svg&#34; alt=&#34;Arrow Down&#34;&gt;
-            &lt;img src=&#34;../icon/delete.svg&#34; alt=&#34;Arrow Down&#34;&gt;
-            &lt;img src=&#34;../icon/arrow-nw.svg&#34; alt=&#34;Arrow Down&#34;&gt;
-            &lt;img src=&#34;../icon/arrow-ne.svg&#34; alt=&#34;Arrow Down&#34;&gt;
-            &lt;img src=&#34;../icon/arrow-sw.svg&#34; alt=&#34;Arrow Down&#34;&gt;
-            &lt;img src=&#34;../icon/arrow-se.svg&#34; alt=&#34;Arrow Down&#34;&gt;
+            &lt;img src=&#34;../icon/arrow-up.svg&#34; alt=&#34;Arrow Uo&#34;&gt;
+            &lt;img src=&#34;../icon/arrow-back.svg&#34; alt=&#34;Arrow Back&#34;&gt;
+            &lt;img src=&#34;../icon/arrow-forward.svg&#34; alt=&#34;Arrow Forward&#34;&gt;
+            &lt;img src=&#34;../icon/plus.svg&#34; alt=&#34;Plus&#34;&gt;
+            &lt;img src=&#34;../icon/minus.svg&#34; alt=&#34;Minus&#34;&gt;
+            &lt;img src=&#34;../icon/delete.svg&#34; alt=&#34;Delete&#34;&gt;
+            &lt;img src=&#34;../icon/arrow-nw.svg&#34; alt=&#34;Arrow NW&#34;&gt;
+            &lt;img src=&#34;../icon/arrow-ne.svg&#34; alt=&#34;Arrow NE&#34;&gt;
+            &lt;img src=&#34;../icon/arrow-sw.svg&#34; alt=&#34;Arrow SW&#34;&gt;
+            &lt;img src=&#34;../icon/arrow-se.svg&#34; alt=&#34;Arrow SE&#34;&gt;
             &lt;img src=&#34;../icon/in.svg&#34; alt=&#34;LinkedIn&#34;&gt;
             &lt;img src=&#34;../icon/ins.svg&#34; alt=&#34;Instagram&#34;&gt;
             &lt;img src=&#34;../icon/git.svg&#34; alt=&#34;GitHub&#34;&gt;
@@ -3185,10 +3185,10 @@
             &lt;img src=&#34;../icon/mail.svg&#34; alt=&#34;Mail&#34;&gt;
             &lt;img src=&#34;../icon/icon_clipboard-tick.svg&#34;&gt;
             &lt;img src=&#34;../icon/icon_Testing.svg&#34;&gt;
-            &lt;img src=&#34;../icon/Document.svg&#34; alt=&#34;Arrow Back&#34;&gt;
+            &lt;img src=&#34;../icon/Document.svg&#34; alt=&#34;Document&#34;&gt;
             &lt;img src=&#34;../icon/Receipt.svg&#34; alt=&#34;Arrow Up&#34;&gt;
-            &lt;img src=&#34;../icon/icon_research.svg&#34; alt=&#34;Arrow Down&#34;&gt;
-            &lt;img src=&#34;../icon/iconAlert.svg&#34; alt=&#34;Arrow Back&#34;&gt;
+            &lt;img src=&#34;../icon/icon_research.svg&#34; alt=&#34;Research&#34;&gt;
+            &lt;img src=&#34;../icon/iconAlert.svg&#34; alt=&#34;Alert&#34;&gt;
             &lt;img src=&#34;../icon/copy.svg&#34; alt=&#34;CodePen&#34;&gt;
             &lt;img src=&#34;../icon/link.svg&#34; alt=&#34;Link&#34;&gt;
             &lt;img src=&#34;../icon/icon_Final.svg&#34;&gt;
