--- a/html/index.html
+++ b/html/index.html
@@ -318,6 +318,7 @@
 
   <div class="wrapper">
 
+
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
         <div class="element">
@@ -331,7 +332,7 @@
                       <label for="password">
                         <h5>Password</h5>
                       </label>
-                      <input class="PWinputLanding" type="password" id="bookingApp" placeholder="Enter password">
+                      <input class="PWinputLanding" type="password" id="onboardingSubscription" placeholder="Enter password">
 
                       <div class="pwIncorrectHeight">
                         <span id="pwIncorrect">Password is incorrect </span>
@@ -481,7 +482,7 @@
                       <label for="password">
                         <h5>Password</h5>
                       </label>
-                      <input class="PWinputLanding" type="password" id="productPage" placeholder="Enter password">
+                      <input class="PWinputLanding" type="password" id="costCalculator" placeholder="Enter password">
 
                       <div class="pwIncorrectHeight">
                         <span id="pwIncorrect">Password is incorrect </span>
@@ -860,7 +861,15 @@
 
   </footer>
   <!--footer-->
-
+  <!-- The Modal -->
+  <div id="modal" class="modal">
+    <span id="modal-close" class="modal-close">
+      <img class="iconXforModal" src="../icon/delete.svg" alt="&times;">
+    </span>
+    <img id="modal-content" class="modal-content">
+    <div id="modal-caption" class="modal-caption"></div>
+  </div>
+  <!-- The Modal -->
 </body>
 
 </html>
