--- a/html/glorify/index.html
+++ b/html/glorify/index.html
@@ -125,7 +125,7 @@
               </a>
               <a href="/design_system/">
                 <div>
-                  <img src="../ProjectImages/Cover_portfolioWeb.svg" alt="Design System">
+                  <img src="../ProjectImages/vicky_website.svg" alt="Design System">
                   <div class="element">
                     <h5 class="colorBlack">Design System | Efficiently Bulid &#38; Maintain Components</h5>
                   </div>
@@ -133,7 +133,7 @@
               </a>
               <a href="/navigation/">
                 <div>
-                  <img src="../ProjectImages/Cover_portfolioWeb.svg" alt="Navigation Design">
+                  <img src="../ProjectImages/vicky_website.svg" alt="Navigation Design">
                   <div class="element">
                     <h5 class="colorBlack">Navigation Design | Secondary Menu Options for vickywang.me</h5>
                   </div>
@@ -366,7 +366,8 @@
       </div>
     </div>
     <!-- Slideshow Title -->
-    <div class="TBcarousel Grid--center Grid Grid--full Grid--gutters u-textCenter wrapper" aria-label="TBcarousel"
+    <div class="wrapper">
+      <div class="TBcarousel Grid--center Grid Grid--full Grid--gutters u-textCenter " aria-label="TBcarousel"
       Tabindex="0" id="TBcarousel1">
       <div class="TBslides">
         <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 5" tabindex="0">
@@ -404,6 +405,8 @@
         </a>
       </div>
     </div>
+    </div>
+
 
     <div class="Grid Grid--full Grid--gutters wrapper u-textCenter">
       <div class="Grid-cell">
