--- a/html/index.html
+++ b/html/index.html
@@ -18,77 +18,96 @@
 
 
   
-  
-  <!-- Open Graph / Facebook -->
-  <meta property="og:locale" content="en_US">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Innovative UX Designer Specializing in B2B SaaS &amp; Mobile Workflow Efficiency - Vicky WangInnovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
-  <meta property="og:" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-  <meta property="og:url" content="https://vickywang.me/">
-  <meta property="og:site_name" content="Vicky's Website">
-  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
+      
+        <!-- Open Graph / Facebook -->
+        <meta property="og:locale" content="en_US">
+        <meta property="og:type" content="website">
+        <meta property="og:title"
+          content="Innovative UX Designer Specializing in B2B SaaS &amp; Mobile Workflow Efficiency - Vicky WangInnovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
+        <meta property="og:" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+        <meta property="og:url" content="https://vickywang.me/">
+        <meta property="og:site_name" content="Vicky's Website">
+        <meta property="og:image"
+          content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://vickywang.me/">
-  <meta property="twitter:title" content="Innovative UX Designer Specializing in B2B SaaS &amp; Mobile Workflow Efficiency - Vicky Wang">
-  <meta property="twitter:description" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="https://vickywang.me/">
+        <meta property="twitter:title" content="Innovative UX Designer Specializing in B2B SaaS &amp; Mobile Workflow Efficiency - Vicky Wang">
+        <meta property="twitter:description" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+        <meta property="twitter:image"
+          content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
-  <!-- favicon -->
+        <!-- favicon -->
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-
-
-
-  <!-- Google Font Preconnect-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <!-- Google Font Preconnect-->
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-  <!--sitewide font-family: 'Lato', sans-serif; -->
-  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Caveat:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <!--handwriting -  font-family: 'Caveat', sans-serif; -->
-  <!--handwriting -  font-family: 'Caveat Brush', sans-serif; -->
-
-  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
-  <!--handwriting font-family: 'Indie Flower'; -->
-
-  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-  <!--handwriting font-family: 'Gloria Hallelujah';  | Hello font|-->
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js" integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <!-- crypto js -->
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <!--jQuery-->
-
-  <!--aos-->
-  <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
 
 
-  <!-- google analytics-->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script>
-    window.dataLayer = window.dataLayer || [];
 
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
+        <!-- Google Font Preconnect-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <!-- Google Font Preconnect-->
+        <link
+          href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+          rel="stylesheet">
+        <!--sitewide font-family: 'Lato', sans-serif; -->
+        <link
+          href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Caveat:wght@400;500;600;700&display=swap"
+          rel="stylesheet">
+        <!--handwriting -  font-family: 'Caveat', sans-serif; -->
+        <!--handwriting -  font-family: 'Caveat Brush', sans-serif; -->
 
-    gtag('config', 'G-E8YXDWJST2');
-  </script>
+        <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+        <!--handwriting font-family: 'Indie Flower'; -->
 
-  <!-- Links -->
-  <link rel="stylesheet" href="/main.css">
-  <script type="text/javascript" src="/scripts.js"></script>
-  <script type="text/javascript" src="/scripts_project.js"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+        <!--handwriting font-family: 'Gloria Hallelujah';  | Hello font|-->
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"
+          integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <!-- crypto js -->
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <!--jQuery-->
+
+        <!--aos-->
+        <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+
+
+
+        <!-- Links -->
+        <link rel="stylesheet" href="/main.css">
+        <script type="text/javascript" src="/scripts.js"></script>
+        <script type="text/javascript" src="/scripts_project.js"></script>
+
+
+
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script>
+          window.dataLayer = window.dataLayer || [];
+
+          function gtag() {
+            dataLayer.push(arguments);
+          }
+          gtag('js', new Date());
+
+          gtag('config', 'G-E8YXDWJST2');
+        </script>
+        <!-- google analytics-->
+
+
+        <script>
+          !function (t, e) { var o, n, p, r; e.__SV || (window.posthog = e, e._i = [], e.init = function (i, s, a) { function g(t, e) { var o = e.split("."); 2 == o.length && (t = t[o[0]], e = o[1]), t[e] = function () { t.push([e].concat(Array.prototype.slice.call(arguments, 0))) } } (p = t.createElement("script")).type = "text/javascript", p.async = !0, p.src = s.api_host + "/static/array.js", (r = t.getElementsByTagName("script")[0]).parentNode.insertBefore(p, r); var u = e; for (void 0 !== a ? u = e[a] = [] : a = "posthog", u.people = u.people || [], u.toString = function (t) { var e = "posthog"; return "posthog" !== a && (e += "." + a), t || (e += " (stub)"), e }, u.people.toString = function () { return u.toString(1) + ".people (stub)" }, o = "capture identify alias people.set people.set_once set_config register register_once unregister opt_out_capturing has_opted_out_capturing opt_in_capturing reset isFeatureEnabled onFeatureFlags getFeatureFlag getFeatureFlagPayload reloadFeatureFlags group updateEarlyAccessFeatureEnrollment getEarlyAccessFeatures getActiveMatchingSurveys getSurveys onSessionId".split(" "), n = 0; n < o.length; n++)g(u, o[n]); e._i.push([i, s, a]) }, e.__SV = 1) }(document, window.posthog || []);
+          posthog.init('phc_YFfkBPuCDNKqDW2MiN26UiK6ooMATaOfqxm59vE2QP5', { api_host: 'https://app.posthog.com' })
+        </script>
+        <!-- posthog analytics-->
 
 </head>
 <!--Head-->
@@ -111,7 +130,7 @@
   <header>
     <nav class="header" id="header">
       <div class="backgroundColorNav">
-        <a href="http://vickywang.me/"><img class="logo pointer" src="/icon/logo.svg" alt="VW"
+        <a href="http://vickywang.me/"><img class="logo pointer" src="/icon/LOGO.svg" alt="VW"
             title="vickywang.me"></a>
         <div class="navbar">
           <ul class="nav-menu">
@@ -323,7 +342,7 @@
       <div class="Grid-cell">
         <div class="element">
           <a class="no-hover-effect">
-            <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
+            <div class="elementCard BYP float cardBorder borderRadiusS shadowBoxLt">
               <div class="img__wrap">
                 <img class="img__img" alt="Work Samples" src="./projectImages/Cover_BYP_AppB2B.png" />
                 <div class="img__description">
@@ -332,7 +351,7 @@
                       <label for="password">
                         <h5>Password</h5>
                       </label>
-                      <input class="PWinputLanding" type="password" id="onboardingSubscription" placeholder="Enter password">
+                      <input class="PWinput" type="password" id="onboardingSubscription" placeholder="Enter password">
 
                       <div class="pwIncorrectHeight">
                         <span id="pwIncorrect">Password is incorrect </span>
@@ -359,7 +378,7 @@
       <div class="Grid-cell">
         <div class="element">
           <a class="no-hover-effect">
-            <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
+            <div class="elementCard BYP float cardBorder borderRadiusS shadowBoxLt">
               <div class="img__wrap">
                 <img class="img__img" alt="Work Samples" src="./projectImages/Cover_BYP_B2C.png" />
                 <div class="img__description">
@@ -368,7 +387,7 @@
                       <label for="password">
                         <h5>Password</h5>
                       </label>
-                      <input class="PWinputLanding" type="password" id="consumerBooking" placeholder="Enter password">
+                      <input class="PWinput" type="password" id="consumerBooking" placeholder="Enter password">
 
                       <div class="pwIncorrectHeight">
                         <span id="pwIncorrect">Password is incorrect </span>
@@ -384,7 +403,7 @@
                   <div class="element">
                     <h5>Password is required </h5>
                     <h3 class="arrCard" data-aos="fade-up"><strong>Enhancing the Consumer Booking Flow</strong></h3>
-                    <h4>Increase conversion rates by reducing booking abandonment</h4>
+                    <h4>Increase consumer conversion rates by reducing booking abandonment</h4>
                   </div>
                 </div>
               </div>
@@ -406,7 +425,7 @@
                       <label for="password">
                         <h5>Password</h5>
                       </label>
-                      <input class="PWinputLanding" type="password" id="adminPanel" placeholder="Enter password">
+                      <input class="PWinputLH" type="password" id="adminPanel" placeholder="Enter password">
 
                       <div class="pwIncorrectHeight">
                         <span id="pwIncorrect">Password is incorrect </span>
@@ -435,14 +454,14 @@
           <a class="no-hover-effect">
             <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
               <div class="img__wrap">
-                <img class="img__img" alt="Work Samples" src="./projectImages/Cover_LASO_RX0.png" />
+                <img class="img__img" alt="Work Samples" src="./projectImages/Cover_LASO_RXZero.png" />
                 <div class="img__description">
                   <div class="input-field">
                     <div class="column">
                       <label for="password">
                         <h5>Password</h5>
                       </label>
-                      <input class="PWinputLanding" type="password" id="rxZero" placeholder="Enter password">
+                      <input class="PWinputLH" type="password" id="rxZero" placeholder="Enter password">
 
                       <div class="pwIncorrectHeight">
                         <span id="pwIncorrect">Password is incorrect </span>
@@ -482,7 +501,7 @@
                       <label for="password">
                         <h5>Password</h5>
                       </label>
-                      <input class="PWinputLanding" type="password" id="costCalculator" placeholder="Enter password">
+                      <input class="PWinputLH" type="password" id="costCalculator" placeholder="Enter password">
 
                       <div class="pwIncorrectHeight">
                         <span id="pwIncorrect">Password is incorrect </span>
@@ -497,7 +516,7 @@
                 <div class="element">
                   <div class="element">
                     <h5>Password is required </h5>
-                    <h3 class="arrCard" data-aos="fade-up"><strong>Cost-benefit calculator</strong></h3>
+                    <h3 class="arrCard" data-aos="fade-up"><strong>Cost-benefit Calculator</strong></h3>
                     <h4>Focus on user understand RX Zero business model, improve subscription rate</h4>
                   </div>
                 </div>
@@ -513,9 +532,8 @@
               <img src="./projectImages/Cover_Glorify.png" alt="GLORIFY">
               <div class="element">
                 <div class="element">
-                  <h5>For daily worship</h5>
-                  <h3 class="arrCard" data-aos="fade-up"><strong>GLORIFY</strong></h3>
-                  <h4>Integrating a community experience into the existing Glorify Application</h4>
+                  <h3 class="arrCard" data-aos="fade-up"><strong>Introducing the First Community to Glorify</strong></h3>
+                  <h4>Grasping Glorify users' distinct requirements and shaping the bedrock for a vibrant Christian community within the app</h4>
                 </div>
               </div>
             </div>
@@ -534,10 +552,8 @@
                 <img src="./projectImages/Cover_APPOINTA.png" alt="APPOINTA">
                 <div class="element">
                   <div class="element">
-                    <h5>For job interview scheduling</h5>
-                    <h3 class="arrCard" data-aos="fade-up"><strong>APPOINTA</strong></h3>
-                    <h4>Streamline the job interview scheduling process to make it more efficient,
-                      convenient, and intuitive</h4>
+                    <h3 class="arrCard" data-aos="fade-up"><strong>APPOINTA: Interview Scheduling Made Simple</strong></h3>
+                    <h4>Explore my UX case study aimed at revamping interview scheduling. This project streamlines the recruiter's tasks, speeds up hiring, and enhances scheduling experiences, reducing interview coordination time and boosting recruitment efficiency.</h4>
                   </div>
                 </div>
               </div>
@@ -552,11 +568,17 @@
               <img src="./projectImages/Cover_SEER.png" alt="SEER">
               <div class="element">
                 <div class="element">
-                  <h5>For tracking business performance</h5>
-                  <h3 class="arrCard" data-aos="fade-up"><strong>SEER</strong></h3>
+                  <h3 class="arrCard" data-aos="fade-up"><strong>SEER: Enhancing Brand Impact on Reddit</strong></h3>
                   <!--Analysis Report-->
-                  <h4>Help the brand managers understand their potential users and promote their
-                    brand on Reddit</h4>
+                  <h4>A conceptual UX case study aimed at transforming Reddit data into actionable insights for brand marketers. This design explores the potential of intuitive analytics to understand user sentiment and engagement, offering a glimpse into the future of targeted marketing strategies.
+                  
+
+
+
+
+
+
+                  </h4>
                 </div>
               </div>
             </div>
