--- a/html/index.html
+++ b/html/index.html
@@ -363,7 +363,7 @@
                 <label for="password">
                   <h5>Password</h5>
                 </label>
-                <input class="PWinput" type="password" id="onboardingSubscription" placeholder="Enter password">
+                <input class="PWinput psJS" type="password" id="onboardingSubscription" placeholder="Enter password">
 
                 <div class="pwIncorrectHeight">
                   <span id="pwIncorrect">Password is incorrect </span>
@@ -402,7 +402,7 @@
                 <label for="password">
                   <h5>Password</h5>
                 </label>
-                <input class="PWinput" type="password" id="consumerBooking" placeholder="Enter password">
+                <input class="PWinput psJS" type="password" id="consumerBooking" placeholder="Enter password">
 
                 <div class="pwIncorrectHeight">
                   <span id="pwIncorrect">Password is incorrect </span>
@@ -445,7 +445,7 @@
                 <label for="password">
                   <h5>Password</h5>
                 </label>
-                <input class="PWinputLH" type="password" id="adminPanel" placeholder="Enter password">
+                <input class="PWinputLH psJS" type="password" id="adminPanel" placeholder="Enter password">
 
                 <div class="pwIncorrectHeight">
                   <span id="pwIncorrect">Password is incorrect </span>
@@ -484,7 +484,7 @@
                 <label for="password">
                   <h5>Password</h5>
                 </label>
-                <input class="PWinputLH" type="password" id="rxZero" placeholder="Enter password">
+                <input class="PWinputLH psJS" type="password" id="rxZero" placeholder="Enter password">
 
                 <div class="pwIncorrectHeight">
                   <span id="pwIncorrect">Password is incorrect </span>
@@ -526,7 +526,7 @@
                 <label for="password">
                   <h5>Password</h5>
                 </label>
-                <input class="PWinputLH" type="password" id="costCalculator" placeholder="Enter password">
+                <input class="PWinputLH psJS" type="password" id="costCalculator" placeholder="Enter password">
 
                 <div class="pwIncorrectHeight">
                   <span id="pwIncorrect">Password is incorrect </span>
