design system update

--- a/html/about/index.html
+++ b/html/about/index.html
@@ -290,7 +290,6 @@
 
 
     <div class="blankHS"></div>
-    <!-- Arrow -->
     <div class="wrapper">
         <div class="Grid Grid--full Grid--gutters u-textCenter">
             <div class="Grid-cell">
@@ -302,7 +301,7 @@
             </div>
         </div>
     </div>
-    <!-- Arrow -->
+    <div class="blankHXS"></div>
 
 
 
@@ -377,7 +376,6 @@
 
 
     <div class="blankHS"></div>
-    <!-- Arrow -->
     <div class="wrapper">
         <div class="Grid Grid--full Grid--gutters u-textCenter">
             <div class="Grid-cell">
@@ -389,7 +387,7 @@
             </div>
         </div>
     </div>
-    <!-- Arrow -->
+    <div class="blankHXS"></div>
 
 
 
@@ -464,7 +462,6 @@
 
 
     <div class="blankHS"></div>
-    <!-- Arrow -->
     <div class="wrapper">
         <div class="Grid Grid--full Grid--gutters u-textCenter">
             <div class="Grid-cell">
@@ -476,7 +473,7 @@
             </div>
         </div>
     </div>
-    <!-- Arrow -->
+    <div class="blankHXS"></div>
 
 
 
@@ -673,7 +670,6 @@
 
 
     <div class="blankHS"></div>
-    <!-- Arrow -->
     <div class="wrapper">
         <div class="Grid Grid--full Grid--gutters u-textCenter">
             <div class="Grid-cell">
@@ -685,7 +681,7 @@
             </div>
         </div>
     </div>
-    <!-- Arrow -->
+    <div class="blankHXS"></div>
 
 
 
