--- a/html/architecture/index.html
+++ b/html/architecture/index.html
@@ -235,7 +235,6 @@
 
 
     <div class="blankHS"></div>
-    <!-- Arrow -->
     <div class="wrapper">
         <div class="Grid Grid--full Grid--gutters u-textCenter">
             <div class="Grid-cell">
@@ -247,7 +246,7 @@
             </div>
         </div>
     </div>
-    <!-- Arrow -->
+    <div class="blankHXS"></div>
 
 
 
@@ -480,7 +479,6 @@
 
 
     <div class="blankHS"></div>
-    <!-- Arrow -->
     <div class="wrapper">
         <div class="Grid Grid--full Grid--gutters u-textCenter">
             <div class="Grid-cell">
@@ -492,7 +490,7 @@
             </div>
         </div>
     </div>
-    <!-- Arrow -->
+    <div class="blankHXS"></div>
 
 
 
