--- a/html/index.html
+++ b/html/index.html
@@ -333,7 +333,6 @@
 
 
     <div class="blankHS"></div>
-    <!-- Arrow -->
     <div class="wrapper">
         <div class="Grid Grid--full Grid--gutters u-textCenter">
             <div class="Grid-cell">
@@ -345,7 +344,7 @@
             </div>
         </div>
     </div>
-    <!-- Arrow -->
+    <div class="blankHXS"></div>
 
 
 
@@ -648,7 +647,6 @@
 
 
     <div class="blankHS"></div>
-    <!-- Arrow -->
     <div class="wrapper">
         <div class="Grid Grid--full Grid--gutters u-textCenter">
             <div class="Grid-cell">
@@ -660,7 +658,7 @@
             </div>
         </div>
     </div>
-    <!-- Arrow -->
+    <div class="blankHXS"></div>
 
 
 
@@ -727,7 +725,6 @@
 
 
     <div class="blankHS"></div>
-    <!-- Arrow -->
     <div class="wrapper">
         <div class="Grid Grid--full Grid--gutters u-textCenter">
             <div class="Grid-cell">
@@ -739,7 +736,7 @@
             </div>
         </div>
     </div>
-    <!-- Arrow -->
+    <div class="blankHXS"></div>
 
 
 
