--- a/html/photography/index.html
+++ b/html/photography/index.html
@@ -964,7 +964,6 @@
 
 
     <div class="blankHS"></div>
-    <!-- Arrow -->
     <div class="wrapper">
         <div class="Grid Grid--full Grid--gutters u-textCenter">
             <div class="Grid-cell">
@@ -976,7 +975,7 @@
             </div>
         </div>
     </div>
-    <!-- Arrow -->
+    <div class="blankHXS"></div>
 
 
 
