design system component update

--- a/html/navigation/V3/index.html
+++ b/html/navigation/V3/index.html
@@ -149,7 +149,7 @@
 
 
     <div class="backgroundColorNav">
-      <a href="/navigation/" class=" pointer colorBlack"><img class="moveLeftRight iconS"
+      <a href="/navigation/" class="widthFitContent pointer colorBlack"><img class="moveLeftRight iconS"
           src="../../icon/arrow-back.svg" alt="Go back">
         <h6>BACK</h6>
       </a>
