--- a/html/glorify/index.html
+++ b/html/glorify/index.html
@@ -99,9 +99,6 @@
   <nav class="header" id="header">
     <div class="backgroundColorNav">
       <a href="http://vickywang.me/"><img class="logo pointer" src="../icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
-
-
-
       <div class="navbar">
         <ul class="nav-menu">
           <li class="dropdown nav-item active activeNav marginZero"><a href="/" class="nav-link box">PROJECT</a>
@@ -125,7 +122,7 @@
               </a>
               <a href="/design_system/">
                 <div>
-                  <img src="../ProjectImages/vicky_website.svg" alt="Design System">
+                  <img src="../ProjectImages/vicky_website.png" alt="Design System">
                   <div class="element">
                     <h5 class="colorBlack">Design System | Efficiently Bulid &#38; Maintain Components</h5>
                   </div>
@@ -133,7 +130,7 @@
               </a>
               <a href="/navigation/">
                 <div>
-                  <img src="../ProjectImages/vicky_website.svg" alt="Navigation Design">
+                  <img src="../ProjectImages/vicky_website.png" alt="Navigation Design">
                   <div class="element">
                     <h5 class="colorBlack">Navigation Design | Secondary Menu Options for vickywang.me</h5>
                   </div>
