--- a/html/navigation/V2/index.html
+++ b/html/navigation/V2/index.html
@@ -105,7 +105,7 @@
 
     <div class="backgroundColorNav">
 
-      <a href="/navigation/" class="centerVer logo pointer colorBlack Grid--center"><img class="moveLeftRight iconS"
+      <a href="/navigation/" class="widthFitContent centerVer logo pointer colorBlack Grid--center"><img class="moveLeftRight iconS"
           src="../../icon/arrow-back.svg" alt="Go back">
         <h6>BACK</h6>
       </a>
