--- a/html/index.html
+++ b/html/index.html
@@ -80,8 +80,9 @@
 
 
 
+        <!-- <link href="https://cdn.jsdelivr.net/npm/the-new-css-reset@1.11.2/css/reset.min.css" rel="stylesheet"> -->
 
-        <!-- Links -->
+        <!-- CSS Reset -->
         <link rel="stylesheet" href="/main.css">
         <script type="text/javascript" src="/scripts.js"></script>
 
@@ -381,9 +382,9 @@
           <div class="element">
             <div class="element">
               <h5>Password is required </h5>
-              <h3 class="arrCard" data-aos="fade-up"><strong>B2B SaaS | Onboarding & Subscription
+              <h3 class="arrCard" data-aos="fade-up"><strong>Streamlined Onboarding & Engagement: Mastering B2B SaaS Subscription Success
                 </strong></h3>
-              <h4>Increase the business onboarding understand BYP & improve the subscription rate
+              <h4>enhancing the onboarding and subscription experience for B2B clients in the SaaS domain. Our focus was on demystifying and refining these critical processes to ensure a seamless and engaging transition for new users. 
               </h4>
             </div>
           </div>
@@ -421,9 +422,8 @@
           <div class="element">
             <div class="element">
               <h5>Password is required </h5>
-              <h3 class="arrCard" data-aos="fade-up"><strong>Enhancing the Consumer Booking
-                  Flow</strong></h3>
-              <h4>Increase consumer conversion rates by reducing booking abandonment</h4>
+              <h3 class="arrCard" data-aos="fade-up"><strong>Consumer Booking Experience: A Journey to Enhanced Engagement and Conversion </strong></h3>
+              <h4>Improving the consumer booking flow within a dynamic service platform. Our mission was to identify and alleviate pain points in the existing booking process, with a goal to substantially elevate user engagement and increase conversion rates. </h4>
             </div>
           </div>
         </div>
@@ -464,8 +464,8 @@
           <div class="element">
             <div class="element">
               <h5>Password is required </h5>
-              <h3 class="arrCard" data-aos="fade-up"><strong>Admin Panel 0 - 1</strong></h3>
-              <h4>Focus on diffetent type of user management</h4>
+              <h3 class="arrCard" data-aos="fade-up"><strong>LASO Admin Panel: From Concept to Reality - Simplified User Management</strong></h3>
+              <h4>The core focus of this panel was to efficiently manage a diverse range of user accounts, including B2B, D2C, and guest users. A unique aspect of this project was accommodating users from B2B with company sponsorship, adding another layer of complexity to the design process.</h4>
             </div>
           </div>
         </div>
@@ -503,8 +503,8 @@
           <div class="element">
             <div class="element">
               <h5>Password is required </h5>
-              <h3 class="arrCard" data-aos="fade-up"><strong>RX Zero | Business Shift</strong></h3>
-              <h4>Focus on business shift overall idea</h4>
+              <h3 class="arrCard" data-aos="fade-up"><strong>Shifting Focus: The Evolution of LASO to RX Zero</strong></h3>
+              <h4>This case study delves into LASO Health's strategic pivot towards the RX Zero model, moving away from RX Local and Telemedicine services. It highlights the key objectives of RX Zero, centering on credibility and affordability. The study showcases the streamlined onboarding and subscription process, along with a simplified ordering system.</h4>
             </div>
           </div>
         </div>
@@ -545,8 +545,8 @@
           <div class="element">
             <div class="element">
               <h5>Password is required </h5>
-              <h3 class="arrCard" data-aos="fade-up"><strong>Cost-benefit Calculator</strong></h3>
-              <h4>Focus on user understand RX Zero business model, improve subscription rate</h4>
+              <h3 class="arrCard" data-aos="fade-up"><strong>RX Zero Savings Explorer - Cost-benefit Calculator</strong></h3>
+              <h4>This tool enables users to compare their current medication costs with the RX Zero subscription model, offering a seamless experience that simplifies making healthcare financial decisions.</h4>
             </div>
           </div>
         </div>
@@ -564,10 +564,8 @@
         <img src="/projectImages/Cover_Glorify.png" alt="GLORIFY">
         <div class="element">
           <div class="element">
-            <h3 class="arrCard" data-aos="fade-up"><strong>Introducing the First Community to
-                Glorify</strong></h3>
-            <h4>Grasping Glorify users' distinct requirements and shaping the bedrock for a vibrant
-              Christian community within the app</h4>
+            <h3 class="arrCard" data-aos="fade-up"><strong>Glorify: Transforming Solitary Devotion into Community Engagement</strong></h3>
+            <h4> This case study explores the evolution of the Glorify app, a mobile platform dedicated to enhancing individual spiritual journeys, into a vibrant community hub for collective faith building.</h4>
           </div>
         </div>
       </div>
