card components update

--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -3992,17 +3992,17 @@
                   <label for="password">
                     <h5>Password</h5>
                   </label>
-
-                  <input class="PWinput" type="password" id="password" placeholder="Enter password">
-
+                  <div class="row">
+                    <input class="PWinput" type="password" id="password" placeholder="Enter password">
+                    <button class="passwordArr" type="submit">
+                      <img src="../icon/arrow-forward.svg" alt="Enter">
+                    </button>
+                  </div>
                   <div class="pwIncorrectHeight">
                     <span id="pwIncorrect">Password is incorrect </span>
                   </div>
                 </div>
-                <button class="passwordArr" type="submit">
-                  <img src="../icon/arrow-forward.svg" alt="Enter">
-                  <!--  <i class="fas fa-chevron-right"></i> -->
-                </button>
+
 
 
               </div>
