Architecture project update

--- a/html/appointa/index.html
+++ b/html/appointa/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Basic Metadata -->
-  <link rel="canonical" href="https://vickywang.me/">
+  <link rel="canonical" href="https://vickywang.me/appointa">
 
   <title>
     Efficient Interview Scheduling Solution for Recruiters | Vicky Wang UX Case Study
@@ -25,14 +25,14 @@
         <meta property="og:title"
           content="Efficient Interview Scheduling Solution for Recruiters | Vicky Wang UX Case StudyInnovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
         <meta property="og:" content="Discover Vicky Wang&#39;s innovative UX case study on streamlining interview scheduling for recruiters, hiring managers, and candidates.">
-        <meta property="og:url" content="https://vickywang.me/">
+        <meta property="og:url" content="https://vickywang.me/appointa">
         <meta property="og:site_name" content="Vicky's Website">
         <meta property="og:image"
           content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/https://vickywang.me/projectImages/Cover_APPOINTA.png">
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
-        <meta property="twitter:url" content="https://vickywang.me/">
+        <meta property="twitter:url" content="https://vickywang.me/appointa">
         <meta property="twitter:title" content="Efficient Interview Scheduling Solution for Recruiters | Vicky Wang UX Case Study">
         <meta property="twitter:description" content="Discover Vicky Wang&#39;s innovative UX case study on streamlining interview scheduling for recruiters, hiring managers, and candidates.">
         <meta property="twitter:image"
