--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Basic Metadata -->
-  <link rel="canonical" href="https://vickywang.me//design_system/">
+  <link rel="canonical" href="https://vickywang.me/design_system">
 
   <title>
     Scalable Design System Design and Implementation by Vicky Wang
@@ -27,14 +27,14 @@
         <meta property="og:title"
           content="Scalable Design System Design and Implementation by Vicky WangInnovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
         <meta property="og:" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-        <meta property="og:url" content="https://vickywang.me//design_system/">
+        <meta property="og:url" content="https://vickywang.me/design_system">
         <meta property="og:site_name" content="Vicky's Website">
         <meta property="og:image"
           content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
-        <meta property="twitter:url" content="https://vickywang.me//design_system/">
+        <meta property="twitter:url" content="https://vickywang.me/design_system">
         <meta property="twitter:title" content="Scalable Design System Design and Implementation by Vicky Wang">
         <meta property="twitter:description" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
         <meta property="twitter:image"
