--- a/html/photography/index.html
+++ b/html/photography/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Basic Metadata -->
-  <link rel="canonical" href="https://vickywang.me/">
+  <link rel="canonical" href="https://vickywang.me/photography">
 
   <title>
     Nature &amp; Wildlife Photographic Artistry by Vicky Wang
@@ -24,14 +24,14 @@
         <meta property="og:title"
           content="Nature &amp; Wildlife Photographic Artistry by Vicky WangInnovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
         <meta property="og:" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-        <meta property="og:url" content="https://vickywang.me/">
+        <meta property="og:url" content="https://vickywang.me/photography">
         <meta property="og:site_name" content="Vicky's Website">
         <meta property="og:image"
           content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
-        <meta property="twitter:url" content="https://vickywang.me/">
+        <meta property="twitter:url" content="https://vickywang.me/photography">
         <meta property="twitter:title" content="Nature &amp; Wildlife Photographic Artistry by Vicky Wang">
         <meta property="twitter:description" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
         <meta property="twitter:image"
