--- a/html/seer/index.html
+++ b/html/seer/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Basic Metadata -->
-  <link rel="canonical" href="https://vickywang.me/">
+  <link rel="canonical" href="https://vickywang.me/seer">
 
   <title>
     SEER: Advanced Reddit Analytics Tool for Brand Managers | Vicky Wang UX Case Study
@@ -25,14 +25,14 @@
         <meta property="og:title"
           content="SEER: Advanced Reddit Analytics Tool for Brand Managers | Vicky Wang UX Case StudyInnovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
         <meta property="og:" content="Elevate your brand with SEER, the premier Reddit Analytics Tool for marketers. Streamline insights with our intuitive workflow, uncover user sentiments and trends, and enhance your marketing strategy on Reddit effectively.">
-        <meta property="og:url" content="https://vickywang.me/">
+        <meta property="og:url" content="https://vickywang.me/seer">
         <meta property="og:site_name" content="Vicky's Website">
         <meta property="og:image"
           content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/https://vickywang.me/projectImages/Cover_SEER.png">
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
-        <meta property="twitter:url" content="https://vickywang.me/">
+        <meta property="twitter:url" content="https://vickywang.me/seer">
         <meta property="twitter:title" content="SEER: Advanced Reddit Analytics Tool for Brand Managers | Vicky Wang UX Case Study">
         <meta property="twitter:description" content="Elevate your brand with SEER, the premier Reddit Analytics Tool for marketers. Streamline insights with our intuitive workflow, uncover user sentiments and trends, and enhance your marketing strategy on Reddit effectively.">
         <meta property="twitter:image"
