--- a/html/about/index.html
+++ b/html/about/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Basic Metadata -->
-  <link rel="canonical" href="https://vickywang.me//about">
+  <link rel="canonical" href="https://vickywang.me/about">
 
   <title>
     Professional Background and Interests - Vicky Wang
@@ -25,14 +25,14 @@
         <meta property="og:title"
           content="Professional Background and Interests - Vicky WangInnovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
         <meta property="og:" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-        <meta property="og:url" content="https://vickywang.me//about">
+        <meta property="og:url" content="https://vickywang.me/about">
         <meta property="og:site_name" content="Vicky's Website">
         <meta property="og:image"
           content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
-        <meta property="twitter:url" content="https://vickywang.me//about">
+        <meta property="twitter:url" content="https://vickywang.me/about">
         <meta property="twitter:title" content="Professional Background and Interests - Vicky Wang">
         <meta property="twitter:description" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
         <meta property="twitter:image"
