--- a/html/architecture/index.html
+++ b/html/architecture/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Basic Metadata -->
-  <link rel="canonical" href="https://vickywang.me/">
+  <link rel="canonical" href="https://vickywang.me/architecture">
 
   <title>
     Architectural Innovation and Academic Exploration - Vicky Wang
@@ -25,14 +25,14 @@
         <meta property="og:title"
           content="Architectural Innovation and Academic Exploration - Vicky WangInnovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
         <meta property="og:" content=" a showcase of innovative design projects from her M.Arch program, highlighting expertise in building form, spatial arrangement, and environmental considerations.">
-        <meta property="og:url" content="https://vickywang.me/">
+        <meta property="og:url" content="https://vickywang.me/architecture">
         <meta property="og:site_name" content="Vicky's Website">
         <meta property="og:image"
           content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
-        <meta property="twitter:url" content="https://vickywang.me/">
+        <meta property="twitter:url" content="https://vickywang.me/architecture">
         <meta property="twitter:title" content="Architectural Innovation and Academic Exploration - Vicky Wang">
         <meta property="twitter:description" content=" a showcase of innovative design projects from her M.Arch program, highlighting expertise in building form, spatial arrangement, and environmental considerations.">
         <meta property="twitter:image"
