--- a/html/architecture/index.html
+++ b/html/architecture/index.html
@@ -14,7 +14,7 @@
   </title>
   <meta name="title" content="Architectural Innovation and Academic Exploration - Vicky Wang">
   <meta name="author" content="Vicky W.">
-  <meta name="description" content=" a showcase of innovative design projects from her M.Arch program, highlighting expertise in building form, spatial arrangement, and environmental considerations.">
+  <meta name="description" content="A showcase of innovative design projects from her M.Arch program, highlighting expertise in building form, spatial arrangement, and environmental considerations.">
 
 
   
@@ -24,7 +24,7 @@
         <meta property="og:type" content="website">
         <meta property="og:title"
           content="Architectural Innovation and Academic Exploration - Vicky WangInnovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
-        <meta property="og:" content=" a showcase of innovative design projects from her M.Arch program, highlighting expertise in building form, spatial arrangement, and environmental considerations.">
+        <meta property="og:" content="A showcase of innovative design projects from her M.Arch program, highlighting expertise in building form, spatial arrangement, and environmental considerations.">
         <meta property="og:url" content="https://vickywang.me/architecture">
         <meta property="og:site_name" content="Vicky's Website">
         <meta property="og:image"
@@ -34,7 +34,7 @@
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://vickywang.me/architecture">
         <meta property="twitter:title" content="Architectural Innovation and Academic Exploration - Vicky Wang">
-        <meta property="twitter:description" content=" a showcase of innovative design projects from her M.Arch program, highlighting expertise in building form, spatial arrangement, and environmental considerations.">
+        <meta property="twitter:description" content="A showcase of innovative design projects from her M.Arch program, highlighting expertise in building form, spatial arrangement, and environmental considerations.">
         <meta property="twitter:image"
           content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
