--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -3970,7 +3970,7 @@ strong {
                   <label for="password">
                     <h5>Password</h5>
                   </label>
-                  <div class="row">
+                  <div class="pwContainer">
                     <input class="PWinput" type="password" id="password" placeholder="Enter password">
                     <button class="passwordArr" type="submit">
                       <img src="../icon/arrow-forward.svg" alt="Enter">
