--- a/html/index.html
+++ b/html/index.html
@@ -357,7 +357,7 @@
                   <h5>Password</h5>
                 </label>
 
-                <div class="row">
+                <div class="pwContainer">
                   <input class="PWinput psJS" type="password" id="onboardingSubscription" placeholder="Enter password">
                   <button class="passwordArr" type="submit">
                     <img src="/icon/arrow-forward.svg" alt="Enter">
@@ -396,7 +396,7 @@
                   <h5>Password</h5>
                 </label>
 
-                <div class="row">
+                <div class="pwContainer">
                   <input class="PWinput psJS" type="password" id="consumerBooking" placeholder="Enter password">
                   <button class="passwordArr" type="submit">
                     <img src="/icon/arrow-forward.svg" alt="Enter">
@@ -437,7 +437,7 @@
                   <h5>Password</h5>
                 </label>
 
-                <div class="row">
+                <div class="pwContainer">
                   <input class="PWinputLH psJS" type="password" id="adminPanel" placeholder="Enter password">
                   <button class="passwordArr" type="submit">
                     <img src="/icon/arrow-forward.svg" alt="Enter">
@@ -476,7 +476,7 @@
                   <h5>Password</h5>
                 </label>
 
-                <div class="row">
+                <div class="pwContainer">
                   <input class="PWinputLH psJS" type="password" id="rxZero" placeholder="Enter password">
                   <button class="passwordArr" type="submit">
                     <img src="/icon/arrow-forward.svg" alt="Enter">
@@ -517,7 +517,7 @@
                   <h5>Password</h5>
                 </label>
 
-                <div class="row">
+                <div class="pwContainer">
                   <input class="PWinputLH psJS" type="password" id="costCalculator" placeholder="Enter password">
                   <button class="passwordArr" type="submit">
                     <img src="/icon/arrow-forward.svg" alt="Enter">
