--- a/html/architecture/manifold_ground/index.html
+++ b/html/architecture/manifold_ground/index.html
@@ -173,7 +173,7 @@
 </header>
 
 
-  <div class="blankHM"></div>
+  <div class="blankHL"></div>
   <!-- cover -->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
