--- a/html/architecture/narrow_stripes/index.html
+++ b/html/architecture/narrow_stripes/index.html
@@ -175,7 +175,7 @@
 </header>
 
 
-  <div class="blankHM"></div>
+  <div class="blankHL"></div>
   <!-- cover -->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
