--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -14,7 +14,7 @@
   </title>
   <meta name="title" content="Scalable Design System Design and Implementation by Vicky Wang">
   <meta name="author" content="Vicky W.">
-  <meta name="description" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+  <meta name="description" content="A comprehensive system that enhances the scalability and consistency of UX design. It serves as a practical guide for designing scalable, efficient, and cohesive user interfaces and experiences. ">
 
 
   
@@ -26,7 +26,7 @@
         <meta property="og:type" content="website">
         <meta property="og:title"
           content="Scalable Design System Design and Implementation by Vicky WangInnovative UX Strategist Specializing in B2B SaaS & Mobile Workflow Efficiency - Vicky Wang">
-        <meta property="og:" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+        <meta property="og:" content="A comprehensive system that enhances the scalability and consistency of UX design. It serves as a practical guide for designing scalable, efficient, and cohesive user interfaces and experiences. ">
         <meta property="og:url" content="https://vickywang.me/design_system">
         <meta property="og:site_name" content="Vicky's Website">
         <meta property="og:image"
@@ -36,7 +36,7 @@
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://vickywang.me/design_system">
         <meta property="twitter:title" content="Scalable Design System Design and Implementation by Vicky Wang">
-        <meta property="twitter:description" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+        <meta property="twitter:description" content="A comprehensive system that enhances the scalability and consistency of UX design. It serves as a practical guide for designing scalable, efficient, and cohesive user interfaces and experiences. ">
         <meta property="twitter:image"
           content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
 
