--- a/html/index.html
+++ b/html/index.html
@@ -640,12 +640,11 @@
     <a class="no-hover-effect" href="/design_system/">
       <div class="">
         <div class=" elementCard float cardBorder borderRadiusS shadowBoxLt">
-          <img src="/projectImages/vicky_website.svg" alt="Design &amp; Iterate">
+          <img src="/projectImages/vicky_website_short.svg" alt="Scalable Design System Design and Implementation">
           <div class="element">
             <div class="element">
-              <h3 class="arrCard" data-aos="fade-up"><strong>Design &amp; Iterate</strong></h3>
-              <h4>Creating a design system to establish consistent branding and styling across the
-                entire website
+              <h3 class="arrCard" data-aos="fade-up"><strong>Scalable Design System Design and Implementation</strong></h3>
+              <h4>A comprehensive system that enhances the scalability and consistency of UX design. It serves as a practical guide for designing scalable, efficient, and cohesive user interfaces and experiences.
               </h4>
             </div>
           </div>
@@ -654,44 +653,7 @@
     </a>
   </div>
 </div>
-      <div class="Grid-cell">
-  <div class="element">
-    <a class="no-hover-effect" href="/design_systemBYP/">
-      <div class="">
-        <div class=" elementCard float cardBorder borderRadiusS shadowBoxLt">
-          <img src="/projectImages/vicky_website.svg" alt="Design &amp; Iterate">
-          <div class="element">
-            <div class="element">
-              <h3 class="arrCard" data-aos="fade-up"><strong>Design &amp; Iterate</strong></h3>
-              <h4>Creating a design system to establish consistent branding and styling across the
-                  entire website
-              </h4>
-            </div>
-          </div>
-        </div>
-      </div>
-    </a>
-  </div>
-</div>
-      <div class="Grid-cell">
-  <div class="element">
-    <a class="no-hover-effect" href="/design_systemLASO/">
-      <div class="">
-        <div class=" elementCard float cardBorder borderRadiusS shadowBoxLt">
-          <img src="/projectImages/vicky_website.svg" alt="Design &amp; Iterate">
-          <div class="element">
-            <div class="element">
-              <h3 class="arrCard" data-aos="fade-up"><strong>Design &amp; Iterate</strong></h3>
-              <h4>Creating a design system to establish consistent branding and styling across the
-                    entire website
-              </h4>
-            </div>
-          </div>
-        </div>
-      </div>
-    </a>
-  </div>
-</div>
+
     </div>
   </div>
   <!-- Arrow -->
