--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -115,13 +115,6 @@
 
 
 <body>
-  <!-- progressBarScroll -->
-<div class="progressContainer">
-  <div class="progress-container">
-    <div class="progress-bar" id="progressBar"></div>
-  </div>
-</div>
-<!-- progressBarScroll -->
 
   <!-- progressBarScroll -->
 <div class="progressContainer">
@@ -141,9 +134,11 @@
 <header>
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-      <a href="/" class="widthFitContent centerVer logo pointer Grid--center"> 
-        <img class="moveLeftRight iconS" src="/icon/arrow-back.svg" alt="Go back">
-        <h6>BACK</h6>
+      <a href="/" class="widthFitContent marginM centerVer pointer Grid--center"> 
+        <div class="arrow-container moveBackArrow">
+          <div class="left-arrow"></div>
+       </div>
+       <h4 class="fontWeight400">BACK</h4>
       </a>
       <div class="navbar">
         <ul class="nav-menu">
