--- a/html/appointa/index.html
+++ b/html/appointa/index.html
@@ -111,15 +111,24 @@
 </head>
 <!--Head-->
 
-<body>
-  <!-- progressBarScroll -->
+<body class="APPOINTA">
+  
+
+
+<!-- progressBarScroll -->
 <div class="progressContainer">
   <div class="progress-container">
-    <div class="progress-bar" id="progressBar"></div>
+    <div class="progress-bar APPOINTA" id="progressBar"></div>
   </div>
 </div>
-<!-- progressBarScroll -->
-  <!-- header -->
+<!-- progressBarScroll -->  
+  
+  
+
+
+<!-- header -->
+
+
 
 
 
@@ -130,11 +139,11 @@
 <header>
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-      <a href="/" class="widthFitContent marginM centerVer pointer Grid--center"> 
+      <a href="/" class="marginS centerVer pointer Grid--center"> 
         <div class="arrow-container moveBackArrow">
-          <div class="left-arrow"></div>
+          <div class="left-arrow APPOINTA"></div>
        </div>
-       <h4 class="fontWeight400">BACK</h4>
+       <h4 class="backText">BACK</h4>
       </a>
       <div class="navbar">
         <ul class="nav-menu">
